# neoforge-do2-bot

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  config.example.toml
coremod/: azalea_bridge.js  build.sh
docs/: openclaw-setup.md
patches/azalea/azalea-client/src/: client.rs
patches/azalea/azalea-client/src/packet_handling/: configuration.rs
patches/azalea/azalea-protocol/src/: read.rs
patches/azalea/azalea/src/: lib.rs
patches/azalea/azalea/src/pathfinder/: mod.rs
patches/simdnbt-0.6.1/: .cargo_vcs_info.json  Cargo.toml
patches/simdnbt-0.6.1/src/: lib.rs  mutf8.rs
src/: config.rs  handler.rs  main.rs  movement.rs  state.rs
src/bridge/: inbound.rs  mod.rs  outbound.rs  types.rs
src/commands/: mod.rs
